# regime-identification

./: .env.example  .gitignore  .pre-commit-config.yaml  Justfile  pyproject.toml
.github/workflows/: ci.yml
frontend/: .env.example  .gitignore  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/components/: CrisisSparkline.tsx  FreshnessBadge.tsx  MetricStat.tsx  (+3 more)
frontend/public/: regime_latest.json  regime_path.json
paper/: Makefile  main.tex  refs.bib
paper/figures/: __init__.py  _common.py  figure_detection_lag.py  figure_regime_path.py  figure_reliability.py  figure_smoothed_vs_filtered.py
regime/: __init__.py  cli.py
regime/api/: __init__.py  app.py  schemas.py
regime/backtest/: __init__.py  costs.py  engine.py  metrics.py  strategies.py
regime/data/: __init__.py  joint_dataset.py  manifest.py  portfolio_returns.py  query.py  store.py  universe.py
regime/ensemble/: __init__.py  calibration.py  crisis_head.py  economic_loss.py  stacker.py
regime/eval/: __init__.py  crises.py  labels.py  metrics.py  registry.py  runner.py  walkforward.py
regime/features/: __init__.py  pipeline.py  registry.py
regime/models/: __init__.py  _hmm_core.py  alignment.py  base.py  bocpd.py  hmm_gaussian.py  joint_hmm.py  msar_t.py  sparse_jump.py  wasserstein_kmeans.py
regime/monitoring/: __init__.py  alerts.py  drift.py  metrics.py
regime/runtime/: __init__.py  filter.py  state.py
regime/strategy/: __init__.py  black_litterman.py  mean_variance.py  regime_bl.py
scripts/: backtest_regime_bl.py  build_paper_inputs.py  eval_joint_hmm_walkforward.py  fit_crisis_head.py  fit_joint_hmm_real_data.py  plot_regime_path.py  run_benchmark.py
tests/: conftest.py
tests/integration/: test_benchmark_smoke.py  test_crisis_head_real.py  test_regime_bl_real.py  test_walkforward_real.py
tests/property/: test_features.py  test_master_pipeline.py  test_pit.py  test_synthetic_split.py  test_walkforward.py
tests/snapshots/: walkforward_joint_hmm_lag.json
tests/unit/: test_alerts.py  test_alignment.py  test_api.py  test_black_litterman.py  test_bocpd.py  test_calibration.py  test_costs.py  test_crises.py  test_crisis_head.py  test_drift.py  test_economic_loss.py  test_engine.py  test_global_features.py  test_hmm_gaussian.py  test_joint_hmm.py  test_labels.py  test_manifest.py  test_mean_variance.py  test_metrics.py  test_metrics_backtest.py  test_metrics_endpoint.py  test_metrics_registry.py  test_msar_t.py  test_paper_figures.py  test_portfolio_returns.py  test_query.py  test_regime_bl.py  test_sparse_jump.py  test_stacker.py  test_state_store.py  test_streaming_filter.py  test_wasserstein_kmeans.py
(+19 files in other folders)
