[project]
name = "regime"
version = "0.1.0"
description = "Real-time regime identification for US equities"
requires-python = ">=3.12"
authors = [{ name = "Kunal Jain", email = "kunal@spectatr.ai" }]
license = { text = "MIT" }
dependencies = [
  "polars>=1.0",
  "pyarrow>=15.0",
  "yfinance>=0.2.40",
  "pandas>=2.0",
  "fredapi>=0.5",
  "typer>=0.12",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "requests>=2.31",
  "numpy>=2.0",
  "scipy>=1.13",
  "hmmlearn>=0.3",
  "fastapi>=0.110",
  "httpx>=0.27",
  "uvicorn>=0.30",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "hypothesis>=6.100",
  "ruff>=0.5",
  "pyright>=1.1",
  "pre-commit>=3.7",
]

[project.scripts]
regime = "regime.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["regime"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF", "TID"]
# RUF001/RUF002/RUF003: ambiguous Greek letters (μ, σ, ν, etc.) and math symbols
# (², ¹, ×). These are correct usage in our HMM / statistics docstrings.
# SIM300: false-positives on math-style variables like `T` (treated as constant
# even when it's a runtime value).
ignore = ["RUF001", "RUF002", "RUF003", "SIM300"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "N803", "N806"]
# Math-style variable names (K, T, D, X, log_A, ...) are idiomatic in HMM /
# machine-learning code; allow them in the math-heavy modules.
"regime/models/**" = ["N803", "N806"]
"regime/ensemble/**" = ["N803", "N806"]
"regime/backtest/**" = ["N803", "N806"]
"regime/strategy/**" = ["N803", "N806"]
"regime/runtime/**" = ["N803", "N806"]
# B008: FastAPI's `Query(...)` / `Depends(...)` in default args is the standard,
# documented pattern; ruff's general "no function calls in defaults" rule
# doesn't apply here.
"regime/api/**" = ["B008"]
# Paper-figure scripts and one-off research scripts use the same math
# conventions as the model code.
"paper/figures/**" = ["N803", "N806"]
"scripts/**" = ["N803", "N806"]
"regime/eval/**" = ["N803", "N806"]

[tool.pyright]
include = ["regime", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportMissingImports = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "slow: marks tests as slow",
  "network: requires network access",
]

[tool.coverage.run]
source = ["regime"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
